src/rendering/scenegraph.h

  typedef struct OOdrawable OOdrawable;
  typedef struct OOscene OOscene;
  typedef struct OOscenegraph OOscenegraph;
typedef void (*OOdrawfunc)(OOobject*);
struct OOdrawable {
  const char *name;
  OOscene *scene;

  float3 p;  // Position
  float3 dp; // delta pos per time step
  float3 dr; // delta rot per time step
  quaternion_t q; // Quaternion
                  //float s; // Scale

  OOdrawfunc draw; // Draw function for this object
};
OOscenegraph* ooSgNewSceneGraph();
/*!
 * Sets the current camera in the scenegraph to cam. The camera should be in the
 * list of known cameras kept by the scenegraph, but this property is not
 * checked unless -DDEBUG is specifyed when building.
 * \param sg The scenegraph in question
 * \param cam A camera pointer to a camera known by the scenegraph
 * \pre sg != NULL
 * \pre cam != NULL
 */
void ooSgSetCam(OOscenegraph *sg, OOcam *cam);
/*!
 * Create a new scene. If parent is NULL, the scene is inserted in the parent's
 * scene vector. In case of null a root scene is created. Note that
 * ooSgNewSceneGraph creates a root scene by default so you should normally pass
 * in a valid pointer to it.
 */
OOscene* ooSgNewScene(OOscene *parent, const char *name);
void ooSgSetSky(OOscenegraph *sg, OOdrawable *obj);
OOscene* ooSgGetRoot(OOscenegraph *sg);
OOscene* ooSgGetScene(OOscenegraph *sg, const char *sceneName);
void ooSgSceneAddChild(OOscene *parent, OOscene *child);
OOdrawable* sgLoadModel(const char *file);