src/sim/spacecraft.h

typedef void (*OOscstepfunc)(OOspacecraft*, double dt);
typedef void (*OOscdetatchfunc)(OOspacecraft*); // Detatch stages
struct OOspacecraft {
  PLworld *world;
  obj_array_t stages;
  int activeStageIdx; // index in stage vector of active stage, this point out where
                      // detachment happens
  PLcompound_object *obj;

  OOdetatchprog detatchProg;

  OOscstepfunc prestep;
  OOscstepfunc poststep;
  OOscdetatchfunc detatchStage;

  OOscene *scene;
};
/*!
  Set position of spacecraft in global coordinates
 */
void ooScSetPos(OOspacecraft *sc, double x, double y, double z);
/*!
 Set position of spacecraft relative to the named system's center
 \param sc The spacecraft object
 \param sysName Name of system with / to separate levels. Eg /Sol/Earth/Luna
 \param x Position in x dimension with respect to system centre
 \param y Position in y dimension with respect to system centre
 \param z Position in z dimension with respect to system centre
 */
void ooScSetSystemAndPos(OOspacecraft *sc, const char *sysName, double x, double y, double z);
/*!
 Set position of spacecraft relative to the system's central objects surface coordinates
 \param sc The spacecraft object
 \param sysName Name of system with / to separate levels. Eg /Sol/Earth/Luna
 \param longitude Longitude
 \param lattidue Latitude
 \param altitude Altitude ASL
 */
void ooScSetSysAndCoords(OOspacecraft *sc, const char *sysName, double longitude, double latitude, double altitude);
OOspacecraft* ooScLoad(PLworld *world, const char *fileName);