src/parsers/model.h

typedef struct model_t {
  float trans[3];
  float rot[4][4];

  size_t childCount;
  struct model_t **children;

  uint32_t vertexCount;
  float *vertices;
  float *texCoords;
  float *normals;
  float *colours;
  uint32_t *faces;
} model_t;
model_t * model_load(const char * restrict fileName);